qa/apps/hello-world-feature-test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world-feature-test
  name: hello-world-feature-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-feature-test
  template:
    metadata:
      labels:
        app: hello-world-feature-test
    spec:
      containers:
        - image: index.docker.io/magnitus/hapi-service:hello-world
          name: hello-world
