qa/apps/hello-world-feature-test/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-feature-test
  name: hello-world-feature-test
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-feature-test
