qa/apps/hello-world-feature-test/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-feature-test
spec:
  rules:
    - host: hello-world-feature-test.local
      http:
        paths:
        - path: /
          backend:
            serviceName: hello-world-feature-test
            servicePort: 8080
